--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
