--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.21.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.8.3",
+    "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^3.0.1",
     "nodemon": "^3.1.7"
   }
 }
