--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.41.3",
-    "dotenv": "^16.4.7",
+
+    "cloudinary": "^1.21.0",
+    "cookie-parser": "^1.4.7",
+
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^3.0.1",
