--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
